--- a/style.css
+++ b/style.css
@@ -1,18 +1,59 @@
-/* CSS is how you can add style to your website, such as colors, fonts, and positioning of your
-   HTML content. To learn how to do something, just try searching Google for questions like
-   "how to change link color." */
-
 body {
-  background-color: white;
-  color: black;
-  font-family: Verdana;
+	background-color: #f8f9fa;
+	color: #202122;
+	font-family: sans-serif;
 }
 figure {
-  display: inline-block;
-  vertical-align: middle;
+	display: inline-block;
+	vertical-align: middle;
 }
 figure figcaption {
-  text-align: center;
-  font-size: 1.2em;
-  vertical-align: middle;
+	text-align: center;
+	font-size: 1.2em;
+	vertical-align: middle;
+}
+.toc {
+	margin: 15px;
+	padding: 5px;
+	border: 1px solid grey;
+	display: inline-block;
+	border-radius: 5px;
+}
+.toc h4 {
+	margin: 0px;
+	margin-bottom: 5px;
+	font-size: 1.2rem;
+	font-weight: bold;
+	color: #5faeea;
+}
+.toc ul {
+	margin: 0px;
+	list-style: none;
+	padding: 0px;
+}
+.toc ul li a {
+	color: #4c74b9;
+	text-decoration: none; /* Removes the underline from the link tags */
+}
+.toc ul li {
+	padding: 2px; /* Adds a little space around each <li> tag */
+}
+#toc-button i {
+	border-radius: 50%;
+	padding: 15px;
+	margin: 20px;
+	float: right;
+	color: #f8f9fa;
+	background-color: red;
+	position: fixed;
+	bottom: 10px;
+	right: 10px;
+}
+
+.custom-toc {
+	position: fixed;
+	border: 1px solid #202122;
+	bottom: 10px;
+	background-color: #f8f9fa;
+	right: 200px;
 }
