--- a/style.css
+++ b/style.css
@@ -32,7 +32,8 @@ figure figcaption {
 	top: 0;
 }
 @media only screen and (max-width: 768px) {
-  [id*="toc","content"] {
-    width: 100%;
-  }
+	[id*="toc","content"] {
+		position: absolute;
+		width: 100%;
+	}
 }
