--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ figure figcaption {
 }
 @media only screen and (max-width: 800px) {
 	#container {
+		display: block;
 		justify-content: initial;
 	}
 	#toc {
