--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ figure figcaption {
 	}
 	#toc {
 		display: block;
-		width: 100vw;
+		width: 100%;
 		position: static;
 		top: auto;
 		vertical-align: top;
