--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ figure figcaption {
 		justify-content: initial;
 	}
 	#toc {
-		display: block;
+		display: inline;
 		width: 100%;
 		position: static;
 		top: auto;
