--- a/style.css
+++ b/style.css
@@ -33,10 +33,11 @@ figure figcaption {
 }
 @media only screen and (max-width: 800px) {
 	#container {
+		display: inline;
 		justify-content: initial;
 	}
 	#toc {
-		display: inline;
+		display: inline-block;
 		width: 100%;
 		position: static;
 		top: auto;
