--- a/style.css
+++ b/style.css
@@ -33,3 +33,9 @@ figure figcaption {
 		top: 0;
 	}
 }
+@media only screen and (max-width: 800px) {
+	#toc {
+		width: 100%;
+		position: fixed;
+		top: 0;
+}
