--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ figure figcaption {
 @media only screen and (max-width: 800px) {
 	#toc {
 		width: 100%;
-		position: fixed;
+		position: relative;
 		top: 0;
 	}
 }
