--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ figure figcaption {
 	font-size: 1.2em;
 	vertical-align: middle;
 }
-
+@media only screen and (min-width: 800px) {
 	#container {
 		display: flex;
 		justify-content: space-around;
@@ -32,14 +32,6 @@ figure figcaption {
 	#toc {
 		width: 30vw;
 		position: sticky;
-		top: 0;
-	}
-
-@media only screen and (max-width: 800px) {
-	#toc {
-		width: 100%;
-		flex: 0 0 100%;
-		order: 0;
 		top: 0;
 	}
 }
