--- a/style.css
+++ b/style.css
@@ -15,6 +15,9 @@ figure figcaption {
 	font-size: 1.2em;
 	vertical-align: middle;
 }
+#toc {
+	font-size: 1.3em;
+}
 @media only screen and (min-width: 800px) {
 	#container {
 		display: flex;
