--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ figure figcaption {
 	font-size: 1.3em;
 	text-decoration: none;
 	color: dark-gray;
-	background-color: #131313;
+	background-color: 919191
 }
 @media only screen and (min-width: 800px) {
 	#container {
