--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ figure figcaption {
 #toc a:active {
 	color: orange;
 }
-li:target {
+:target {
   animation: hilight 2.5s;
 }
 @keyframes hilight {
