--- a/style.css
+++ b/style.css
@@ -53,8 +53,10 @@ figure figcaption {
 		width: 30vw;
 		position: sticky;
 		top: 0;
+		right: 10px;
 		vertical-align: middle;
-		float: right;
 		text-align: right;
+		z-index: 9999;
+
 	}
 }
