--- a/style.css
+++ b/style.css
@@ -48,15 +48,15 @@ figure figcaption {
 		height: 100vh;
 		clear:both;
 	}
-	#toc {
+	#toc_container {
 		display: inline-block;
+		float: right;
 		width: 400px;
-		position: sticky;
 		top: 0;
 		right: 10px;
-		vertical-align: middle;
-		float: right;
-		z-index: 9999;
-
+	}
+	#toc_content {
+		position: sticky;
+		text-align: right;
 	}
 }
