--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ figure figcaption {
 #toc {
 	font-size: 1.3em;
 	color: gray;
+	list-style-type: none;
 }
 #toc a {
 	color: gray;
@@ -46,8 +47,9 @@ figure figcaption {
 	}
 	#toc {
 		position: sticky;
-		width: 70vw;
+		width: 400px;
 		top: 0;
 		right: 10px;
+		text-align: right;
 	}
 }
