--- a/style.css
+++ b/style.css
@@ -18,11 +18,13 @@ figure figcaption {
 #toc {
 	font-size: 1.3em;
 	color: gray;
-	list-style-type: none;
 }
 #toc a {
 	color: gray;
 	text-decoration: none;
+}
+#toc li {
+	list-style-type: none;
 }
 #toc a:active {
 	color: orange;
