--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ figure figcaption {
 #toc {
 	font-size: 1.3em;
 	color: gray;
+	overflow-y:auto;
 }
 #toc a {
 	color: gray;
@@ -50,6 +51,7 @@ figure figcaption {
 	#toc {
 		position: sticky;
 		width: 400px;
+		height: 100%;
 		top: 0;
 		right: 10px;
 		text-align: right;
