--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ figure figcaption {
 	#toc {
 		position: sticky;
 		width: 400px;
-		height: 100%;
+		height: 100vh;
 		top: 0;
 		right: 10px;
 		text-align: right;
