--- a/style.css
+++ b/style.css
@@ -24,14 +24,17 @@ figure figcaption {
 	color: gray;
 	text-decoration: none;
 }
-#toc li {
-	list-style-type: none;
-}
-#toc ul ul{
-	font-size: 0.8em;
+#toc a:hover {
+	color: black;
 }
 #toc a:active {
 	color: orange;
+}
+#toc li {
+	list-style-type: none;
+}
+#toc ul ul {
+	font-size: 0.8em;
 }
 :target {
   animation: hilight 2.5s;
@@ -50,6 +53,7 @@ figure figcaption {
 	}
 	#content div {
 		height: 100vh;
+		width: 60%;
 	}
 	#toc {
 		position: sticky;
