--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 html {
 	scroll-behavior: smooth;
 }
+
 body {
 	background-color: white;
 	color: #202122;
@@ -11,80 +12,124 @@ body {
 	max-width: 1024px;
 	margin: 0 auto;
 }
+
 h1 {
 	font-size: 2em;
 	margin: 0 0 10px 0;
 }
+
 h2 {
 	font-size: 1.75em;
 	font-style: italic;
 }
+
 h3 {
 	font-size: 1.5em;
 }
+
 h4 {
 	font-size: 1.25em;
 	font-style: italic;
 }
-h5, h6 {
+
+h5,
+h6 {
 	font-size: 1em;
 	margin: 10px 0 0 0;
 }
+
 h6 {
 	font-weight: normal;
 	font-size: italic;
 }
-h2, h3, h4 {
+
+h2,
+h3,
+h4 {
 	margin: 20px 0 5px 0;
 }
-h1 + p, h2 + p, h3 + p, h4 + p, h5 + p, h6 + p, h1 + table.right + p, h2 + table.right + p, h3 + table.right + p, h4 + table.right + p, h5 + table.right + p, h6 + table.right + p {
+
+h1+p,
+h2+p,
+h3+p,
+h4+p,
+h5+p,
+h6+p,
+h1+table.right+p,
+h2+table.right+p,
+h3+table.right+p,
+h4+table.right+p,
+h5+table.right+p,
+h6+table.right+p {
 	margin-top: 0;
 }
-a:link, a:visited {
+
+a:link,
+a:visited {
 	color: #0645ad;
 	text-decoration: none;
 }
+
 a:hover {
 	text-decoration-line: underline;
 }
+
 a:active {
 	color: orange;
 }
+
 figure {
 	display: inline-block;
 	vertical-align: middle;
 }
+
 figure figcaption {
 	text-align: center;
 	font-size: 1.2em;
 	vertical-align: middle;
 }
+
 #toc {
 	font-size: 1.3em;
 	color: gray;
-	overflow-y:auto;
+	overflow-y: auto;
 }
+
 #toc a {
 	color: gray;
 	text-decoration: none;
 }
+
 #toc a:hover {
 	color: black;
 }
+
 #toc li {
 	list-style-type: none;
 }
+
 #toc ul ul {
 	font-size: 0.8em;
 }
+
 :target {
 	animation: hilight 2.5s;
 }
+
 @keyframes hilight {
-	0% {background: transparent;}
-	10% {background: yellow;}
-	100% {background: transparent;}
+	0% {
+		background: transparent;
+	}
+
+	10% {
+		background: yellow;
+	}
+
+	100% {
+		background: transparent;
+	}
 }
+
 @media only screen and (min-width: 800px) {
 	#container {
 		display: flex;
@@ -92,10 +137,12 @@ figure figcaption {
 		flex-direction: row-reverse;
 		align-items: flex-start;
 	}
+
 	#content div {
 		height: 100vh;
 		width: 100%;
 	}
+
 	#toc {
 		position: sticky;
 		width: 100%;
