--- a/style.css
+++ b/style.css
@@ -13,6 +13,34 @@ body {
 	margin: 0 auto;
 }
 
+nav {
+	border-bottom: 1px solid black;
+	margin-bottom: 10px;
+}
+
+.crumbs ol {
+	list-style-type: none;
+	padding-left:0;
+}
+	
+.crumb {
+	display: inline-block;
+}
+
+.crumb a::after {
+	display: inline-block;
+	color: #000;
+	content: '>';
+	font-size: 80%;
+	font-weight: bold;
+	padding: 0 3px;
+}
+
+.langnav {
+	display: block;
+	float:right;
+}
+
 h1 {
 	font-size: 2em;
 	margin: 0 0 10px 0;
