--- a/style.css
+++ b/style.css
@@ -314,13 +314,11 @@ body {
 	}
 }
 
-nav {
-	border-bottom: 1px solid black;
-	margin-bottom: 10px;
-}
 
 .crumbs {
 	font-family: sans-serif;
+	border-bottom: 1px solid #000;
+	margin-bottom: 10px;
 }
 
 .crumbs ul {
