transform cite-old-long to uppercase

--- a/_sass/law.scss
+++ b/_sass/law.scss
@@ -21,7 +21,7 @@ span.other-lang:lang(la){font-style:italic;}
 h1.schedule-label{font-weight:normal;font-size:1em;margin-top:1em;}
 h1.schedule-title-text,h2.schedule-title-text{font-weight:normal;font-size:1.67em;margin-top:1em;}
 .title-of-act{font-size:1.4em;text-align:center;font-weight:bold;padding-top:1em;}
-h2.cite-old-long{text-align:center;font-weight:bold;}
+h2.cite-old-long{text-align:center;font-weight:bold;text-transform:uppercase;}
 span.h-title-text1{font-size:1.67em;display:block;margin:0;font-weight:bold;}
 .chapter-number{font-size:1.08em;font-weight:bold;margin-top:1em;text-align:center;}
 h1.summary{text-align:center;}
