--- a/_sass/law.scss
+++ b/_sass/law.scss
@@ -63,8 +63,8 @@ p.enabling-act{text-align:center;text-decoration:underline;}
 .continued-subparagraph{margin-left:3em;}
 .continued-clause{margin-left:4.5em;}
 .continued-subclause{margin-left:6em;}
-.marginal-note, .bilingual-group-title-text{margin-bottom:0.7em;margin-top:1.2em;font-weight:bold;font-size:92%;}
-span.marginal-note-in-heading{display:block;margin:0;font-size:92%;text-align:left!important;}
+.marginal-note, .bilingual-group-title-text{margin-bottom:0.7em;margin-top:1.2em;font-weight:bold;}
+span.marginal-note-in-heading{display:block;margin:0;text-align:left!important;}
 dl.definition{clear:both;}
 dl.definition dt{margin-top:1em;}
 dl.definition dd{margin-left:0;margin-bottom:1em;}
