--- a/_sass/law.scss
+++ b/_sass/law.scss
@@ -59,6 +59,7 @@ p.enabling-act{text-align:center;text-decoration:underline;}
 .section{margin-top:0.7em;margin-bottom:0.5em;}
 .subsection{margin-top:0.7em;margin-bottom:0.5em;}
 .continued-section-subsection{margin-top:0.7em;margin-bottom:0.5em;}
+h2.cite-old-long+h2.title-of-act{padding-top:0}
 .continued-paragraph{margin-left:1.5em;}
 .continued-subparagraph{margin-left:3em;}
 .continued-clause{margin-left:4.5em;}
